--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,29 @@
 <resources>
     <string name="app_name">微帮帮</string>
     <string name="no_net">网络不可用,请检查你的网络</string>
+
     <string name="home_page">首页</string>
     <string name="member_center">会员中心</string>
     <string name="personal_center">个人中心</string>
+
+
     <string name="woyaozhuangyong">我要赚佣</string>
     <string name="mianfeilingyong">免费领用</string>
     <string name="kaitonghuiyuan">开通会员</string>
     <string name="toufangguanggao">投放广告</string>
     <string name="fenxiangzhuanqian">分享赚钱</string>
     <string name="lianxikefu">联系客服</string>
+
+
     <string name="woderenwu">我的任务</string>
     <string name="paihangbang">排行榜</string>
     <string name="renwuguize">任务规则</string>
     <string name="renwudating">任务大厅</string>
+
+
     <string name="notice_1">微帮帮APP正式上架</string>
     <string name="notice_2">微帮帮APP正式上架微帮帮APP...</string>
+
+    <string name="make_money_tips">仔细阅读 ~ 教你足不出户赚佣金 ~</string>
+    <string name="lijizhuanyong">立即赚佣</string>
 </resources>
