--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,13 +100,29 @@
     <string name="urban_area_hint">请填写我所在的市区</string>
     <string name="detailed_address">详细地址</string>
     <string name="detailed_address_hint">请填写我的详细地址</string>
-    
+
     <!--我的团队-->
     <string name="first_class_members">我的一级会员</string>
     <string name="two_level_members">我的二级会员</string>
     <string name="first_class_members_tip">一级会员可提供自己10%的收益</string>
     <string name="two_level_members_tip">二级会员可提供自己5%的收益</string>
     <string name="inviting_friends">邀 请 好 友</string>
+
+    <!-- 登录注册找回密码 -->
+    <string name="pwd">密码</string>
+    <string name="pwd_again">确认密码</string>
+    <string name="verification_code">验证码</string>
+    <string name="verification_code_sending">验证码已发送，请查收。</string>
+    <string name="get">获取</string>
+    <string name="login">登    录</string>
+    <string name="register">注    册</string>
+    <string name="submit_updata">确  认  修  改</string>
+    <string name="no_account">没有账号？</string>
+    <string name="have_account">已有账号？</string>
+    <string name="register_now">立即注册</string>
+    <string name="login_now">立即登录</string>
+    <string name="forget_pwd">忘记密码？</string>
+    <string name="banquan">©2018-www.weibangbang.com-model</string>
 
     <!--任务大厅-->
     <string name="general_task">普通任务</string>
