--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,4 +156,10 @@
     <!--我的钱包-->
     <string name="xiaofeimingxi">消费明细</string>
     <string name="total">合计：</string>
+
+    <!--提现-->
+    <string name="lijitixian">立 即 提 现</string>
+    <string name="tixianfangshi">选择提现方式</string>
+    <string name="yixianjine">输入提现金额</string>
+    <string name="keyixianjine">可提现金额</string>
 </resources>
