微帮帮布局搭建

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
 
 
     <string name="woyaozhuangyong">我要赚佣</string>
-    <string name="mianfeilingyong">免费领用</string>
+    <string name="mianfeilingyong">会员福利</string>
     <string name="kaitonghuiyuan">开通会员</string>
     <string name="toufangguanggao">投放广告</string>
     <string name="fenxiangzhuanqian">分享赚钱</string>
